# site.mahsummary

./: .gitignore  CREDITS.md  README.md  makefile  package-lock.json  pyproject.toml
.github/workflows/: gen_site.yml
docs/: CNAME  index.html  lunr.idx.json
docs/c/: output.css
docs/en/: archive.html  index.html  subscription.html
docs/en/dept/: 2022-W33-Agriculture,DairyDevelopment,AnimalHusbandryandFisheriesDepartment.html  2022-W33-FinanceDepartment.html  2022-W33-GeneralAdministrationDepartment.html  2022-W33-HigherandTechnicalEducationDepartment.html  2022-W33-HomeDepartment.html  2022-W33-LawandJudiciaryDepartment.html  2022-W33-MedicalEducationandDrugsDepartment.html  2022-W33-OtherBackwardBahujanWelfareDepartment.html  2022-W33-PlanningDepartment.html  2022-W33-PublicHealthDepartment.html  2022-W33-RevenueandForestDepartment.html  2022-W33-RuralDevelopmentDepartment.html  2022-W33-SchoolEducationandSportsDepartment.html  2022-W33-SkillDevelopmentandEntrepreneurshipDepartment.html  2022-W33-SocialJusticeandSpecialAssistanceDepartment.html  2022-W33-SoilandWaterConservationDepartment.html  2022-W33-UrbanDevelopmentDepartment.html  2022-W33-summary.html  2022-W34-Agriculture,DairyDevelopment,AnimalHusbandryandFisheriesDepartment.html  2022-W34-Co-operation,TextilesandMarketingDepartment.html  2022-W34-EnvironmentDepartment.html  2022-W34-FinanceDepartment.html  2022-W34-Food,CivilSuppliesandConsumerProtectionDepartment.html  2022-W34-GeneralAdministrationDepartment.html  2022-W34-HigherandTechnicalEducationDepartment.html  2022-W34-HomeDepartment.html  2022-W34-Industries,EnergyandLabourDepartment.html  2022-W34-LawandJudiciaryDepartment.html  2022-W34-MarathiLanguageDepartment.html  2022-W34-MedicalEducationandDrugsDepartment.html  2022-W34-MinoritiesDevelopmentDepartment.html  2022-W34-OtherBackwardBahujanWelfareDepartment.html  2022-W34-PlanningDepartment.html  2022-W34-PublicHealthDepartment.html  2022-W34-PublicWorksDepartment.html  2022-W34-RevenueandForestDepartment.html  2022-W34-RuralDevelopmentDepartment.html  2022-W34-SchoolEducationandSportsDepartment.html  2022-W34-SkillDevelopmentandEntrepreneurshipDepartment.html  2022-W34-SocialJusticeandSpecialAssistanceDepartment.html  (+5518 more)
docs/j/: search.js
docs/mr/: archive.html  index.html
docs/mr/dept/: 2022-W33-Agriculture,DairyDevelopment,AnimalHusbandryandFisheriesDepartment.html  2022-W33-FinanceDepartment.html  2022-W33-GeneralAdministrationDepartment.html  2022-W33-HigherandTechnicalEducationDepartment.html  2022-W33-HomeDepartment.html  2022-W33-LawandJudiciaryDepartment.html  2022-W33-MedicalEducationandDrugsDepartment.html  2022-W33-OtherBackwardBahujanWelfareDepartment.html  2022-W33-PlanningDepartment.html  2022-W33-PublicHealthDepartment.html  2022-W33-RevenueandForestDepartment.html  2022-W33-RuralDevelopmentDepartment.html  2022-W33-SchoolEducationandSportsDepartment.html  2022-W33-SkillDevelopmentandEntrepreneurshipDepartment.html  2022-W33-SocialJusticeandSpecialAssistanceDepartment.html  2022-W33-summary.html  (+5508 more)
flow/genSite_/: a.txt  input  makefile
(+23 files in other folders)
