[project]
name = "site.mahsummary"
version = "0.1.0"
description = "Website for the orgpedia/mahsummary dataset"
authors = [{ name = "mukundesh", email = "mukundesh@outlook.com" }]
requires-python = "=>3.10"
readme = "README.md"
license = "MIT"
dependencies = ["pyright>=1.1.355,<2"]

[dependency-groups]
dev = [
    "jinja2>=3.1.3,<4",
    "more-itertools>=10.2.0,<11",
    "ruff>=0.3.3,<0.4",
    "lunr>=0.7.0.post1,<0.8",
    "python-dateutil>=2.9.0.post0,<3",
    "pyyaml>=6.0.1,<7",
]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F", "W", "I001"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["I001"] # fix only isort issues
lint.unfixable = []
lint.per-file-ignores = {}

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "dist",
    "node_modules",
    "venv",
    ".bak",
    "input",
    "output",
    "logs",
    "conf",
    "export",
    "models",
    "documents",
    "data_packages",
    "websites",
    "page_images",
    "html",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[tool.pyright]
reportAttributeAccessIssue = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
